[package]
name = "can_mcp2515"
version = "0.1.0"
edition = "2021"
authors = ["Viktor Smedberg <viktor@smedberg.eu>"]
repository = "https://github.com/wiiggee1/can_mcp2515"

[dependencies]
#lib = { path = "./src/lib", default-features = false }

embedded-hal = "1.0.0"
embedded-can = "0.4.1"
nb = "1.1.0"
